--- a/TestNGTutorial/test-output/old/Default suite/methods.html
+++ b/TestNGTutorial/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a494c8">  <td>21/01/07 22:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestPerformance.test()[pri:0, instance:performancetesting.TestPerformance@56a6d5a6]">test</td> 
-  <td>main@836220863</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:15:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WriteToExcel.beforeClass()[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:15:46</td>   <td>9256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WriteToExcel.test(java.lang.String, java.lang.String)[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">test</td> 
+  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:15:58</td>   <td>20771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WriteToExcel.afterMethod(org.testng.ITestResult)[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:15:58</td>   <td>20793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WriteToExcel.test(java.lang.String, java.lang.String)[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">test</td> 
+  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:16:05</td>   <td>28003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WriteToExcel.afterMethod(org.testng.ITestResult)[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
+<tr bgcolor="8bf372">  <td>21/02/09 19:16:05</td>   <td>28029</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WriteToExcel.afterClass()[pri:0, instance:readfromexcel.WriteToExcel@1e802ef9]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@787738361</td>   <td></td> </tr>
 </table>
